# helix-plugins

./: README.md  hx.toml
hello_world/: Cargo.toml
hello_world/src/: lib.rs
parrot/: Cargo.toml
parrot/src/: lib.rs
